--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -5,18 +5,25 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
+      - name: Check out repository code
+        uses: actions/checkout@v2
+
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
 
-      - name: Run build
-        run: cd makentoshe-multiplatform-shuvi | ./gradlew build
-          
+      - name: Build server-side
+        run: | 
+          ${{ github.workspace }}/makentoshe-multiplatform-shuvi/.gradlew build
+
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+
       - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v2
+
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
+
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
+
       - run: echo "🍏 This job's status is ${{ job.status }}."
