ci: implement test ci/cd

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -12,6 +12,10 @@ jobs:
         run: |
           ls ${{ github.workspace }}
 
+      - name: List files in the repository
+        run: |
+          ls ${{ github.workspace }}/makentoshe-multiplatform-shuvi
+
       - name: Build server-side
         run: | 
           ${{ github.workspace }}/makentoshe-multiplatform-shuvi/.gradlew build
