--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Build server-side
         run: | 
-          ${{ github.workspace }}/makentoshe-multiplatform-shuvi/.gradlew build
+          ${{ github.workspace }}/makentoshe-multiplatform-shuvi/gradlew build
 
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
 
