ci: implement test ci/cd

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -15,6 +15,10 @@ jobs:
       - name: Move into server-side
         run: cd makentoshe-multiplatform-shuvi
 
+      - name: List files in the repository
+        run: |
+          ls
+
       - name: Make gradlew executable
         run: |
           chmod +x gradlew
