--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -16,18 +16,16 @@ jobs:
         run: |
           chmod +x gradlew
 
-      - name: Build server-side
+      - name: Build server-side- to be sure all is ok
         run: | 
           ./gradlew build
 
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+      - name: Build server-side fat-jar
+        run: |
+          ./gradlew shadowJar
+          
+      - name: Upload server-side fat-jar artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: monolith-shadow
+          path: monolith/build/libs/monolith-shadow.jar
