--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: "3.9"
 services:
 
+  # postgres database service
   postgres:
     container_name: monolith_postgres_container
     # postgres version
@@ -38,20 +39,20 @@ services:
       - "pg_stat_statements.track=all"
     # postgres environments
     environment:
-      POSTGRES_DB: "developmentdp"
+      POSTGRES_DB: "developmentdb"
       POSTGRES_USER: "developer"
       POSTGRES_PASSWORD: "1243"
       # path to postgresql volumes (usually volume will be placed in the postgresdata folder near this file)
-      PGDATA: "/var/lib/postgresql/data/postgresdata"
+      PGDATA: "/var/lib/postgresql/data/volume-monolith_postgres_container"
     volumes:
-      - ../2. Init Database:/docker-entrypoint-initdb.d
-      - .:/var/lib/postgresql/data
+      - .:/var/lib/volime-monolith_postgres_container/data
     # ports for connection to the postgres
+    # [port we want on our machine]:[port we want to retrieve in the container]
     ports:
       - "5432:5432"
     # performs a container health check and if something goes wrong - restart it
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U developer -d developerdb" ]
+      test: [ "CMD-SHELL", "pg_isready -U developer -d developmentdb" ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -67,6 +68,8 @@ services:
     networks:
       - postgres
 
+# service for debugging and some kind of monitoring
+# placed at http://localhost:5050/browser/#
   pgadmin:
     container_name: monolith_pgadmin_container
     image: dpage/pgadmin4:5.7
@@ -75,7 +78,9 @@ services:
       PGADMIN_DEFAULT_PASSWORD: "1243"
       PGADMIN_CONFIG_SERVER_MODE: "False"
     volumes:
-      - ./pgadmin:/var/lib/pgadmin
+      - ./pgadmin:/var/lib/volume-monolith-pgadmin-container
+    # ports for connection to the pgadmin.
+    # [port we want on our machine]:[port we want to retrieve in the container]
     ports:
       - "5050:80"
     restart: unless-stopped
@@ -87,6 +92,19 @@ services:
     networks:
       - postgres
 
+  # service for building and holding a server app
+  web:
+    container_name: monolith_server_container
+    build: .
+    volumes:
+      - .:/volume-monolith-server-container
+    # [port we want on our machine]:[port we want to retrieve in the container]
+    ports:
+      - "8080:8080"
+    networks:
+      - postgres
+
+# connect services in one network
 networks:
   postgres:
     driver: bridge
